--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -10,14 +10,19 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Node.js
-      uses: actions/setup-node@v1
+    - name: Deploy to Yandex Cloud
+      uses: appleboy/ssh-action@master
       with:
-        node-version: '14'
-    - name: Build Docker image
-      run: |
-        docker build -t moab-project .
-    - name: Run tests
-      run: |
-        docker run --rm moab-project npm test
+        host: 158.160.8.34
+        username: isingaq
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        script: |
+          cd /moab/
+          git pull origin main
+          docker stop moab_project || true
+          docker rm moab_project || true
+          docker build -t moab_project-main .
+          docker run -d --name moab_project -p 5000:5000 moab_project-main
+          docker stop moab_project || true
+          docker rm moab_project || true
+          docker run -d --name moab_project -p 5000:5000 isingaq/moab_project-main:latest
