--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,23 @@
 name: Test Workflow
 on: [push, workflow_dispatch]
+
 jobs:
-  test_job:
+  build:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Run a one-line script
-      run: echo "Hello, world!"
+    - name: Deploy to Yandex Cloud
+      uses: appleboy/ssh-action@master
+      with:
+        host: 158.160.8.34
+        username: isingaq
+        key: ${{ secrets.SSH_PRIVATE_KEY }}
+        script: |
+          cd /moab/
+          git pull origin main
+          docker stop moab_project || true
+          docker rm moab_project || true
+          docker build -t moab_project-main .
+          docker run -d --name moab_project -p 5000:5000 moab_project-main
+          docker stop moab_project || true
+          docker rm moab_project || true
+          docker run -d --name moab_project -p 5000:5000 isingaq/moab_project-main:latest
