--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,10 +14,10 @@ jobs:
         script: |
           cd /home/isingaq/moab/
           git pull origin main
-          docker stop moab_project || true
-          docker rm moab_project || true
+          docker stop moab_project-main || true
+          docker rm moab_project-main || true
           docker build -t moab_project-main .
-          docker run -d --name moab_project -p 5000:5000 moab_project-main
+          docker run -d --name moab_project-main -p 5000:5000 moab_project-main
           docker stop moab_project || true
           docker rm moab_project || true
           docker run -d --name moab_project -p 5000:5000 isingaq/moab_project-main:latest
