--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,7 +13,7 @@ jobs:
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         script: |
           cd /home/isingaq/moab/
-          git pull origin main
+          git pull origin backend
           docker stop moab_project-main || true
           docker rm moab_project-main || true
           docker build -t moab_project-main .
